# solos

./: .gitignore  README.md  package-lock.json
app/runtime-core/: Cargo.toml  README.md
app/runtime-core/src/: main.rs
app/shell/: README.md  index.html  package-lock.json  package.json  tsconfig.json
app/shell-native/: CMakeLists.txt  README.md
app/shell-native/qml/: Main.qml
app/shell-native/qml/components/: ActivityItem.qml  AppTile.qml  ApprovalItem.qml  SidebarNav.qml  TopStatusBar.qml
app/shell-native/qml/screens/: AgentScreen.qml  AppsScreen.qml  HomeScreen.qml
app/shell-native/src/: activityfeedmodel.cpp  activityfeedmodel.h  appcontroller.cpp  appcontroller.h  appregistrymodel.cpp  appregistrymodel.h  approvalqueuemodel.cpp  approvalqueuemodel.h  ghostruntime.cpp  ghostruntime.h  homestate.cpp  homestate.h  main.cpp  quickactionsmodel.cpp  quickactionsmodel.h  runtime_snapshot.json  runtimebridge.cpp  runtimebridge.h
app/shell/src/: main.tsx
app/shell/src/app/: shell-root.tsx
app/shell/src/components/: app-shell.tsx  approval-item-card.tsx  context-rail.tsx  conversation-message.tsx  demo-flow-panel.tsx  panel-card.tsx  (+5 more)
appliance/demo-linux-v1/: README.md
appliance/demo-linux-v1/live-build/: README.md  build-iso.sh  prepare-build-context.sh
appliance/demo-linux-v1/scripts/: build-demo-iso.md  image-assembly-notes.md
config/: ghost.json
docs/: architecture-v0.md  architecture-v1.md  architecture.md  backlog-v1.md  devlog.md  ghost-onboarding-policy.md  linkedin-solos-update-2026-04-13.md  mvp-v0.md  native-migration-v0.md  phase-transition.md  roadmap-v0.md  roadmap.md  solos-v1.0.md  thesis.md  ui-blueprint-v1.md
(+17 files in other folders)
